# aiohttp-client

./: README.md  pyproject.toml
.github/workflows/: python-package.yml
src/aiohttp_client/: __init__.py  client.py  client_reqrep.py
tests/: test_client.py
