[project]
name = "aiohttp-client"
version = "0.1.0.dev"
description = "Add your description here"
authors = [
    { name = "MtkN1", email = "51289448+MtkN1@users.noreply.github.com" }
]
dependencies = [
    "aiohttp>=3.9,<4.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "aiohttp_client:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    # See: https://github.com/postmanlabs/httpbin/issues/673
    "werkzeug<2.1",
    "pytest-httpbin>=2.0,<3.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/aiohttp_client"]
